--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Homepage - Semantic</title>
+    <title>Depado</title>
     <link rel="icon" href="/static/favicon.ico">
     <link rel="stylesheet" type="text/css" href="/static/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="/static/custom.css">
@@ -36,18 +36,16 @@
     <!-- Page Contents -->
     <div class="pusher">
         <div class="ui inverted vertical masthead center aligned segment" id="burst">
-
             <div class="ui container">
                 <div class="ui large secondary inverted pointing menu">
                     <a class="toc item">
                         <i class="sidebar icon"></i>
                     </a>
-                    <a class="active item">Me</a>
-                    <a class="item">Projects</a>
-                    <a class="item">Experience</a>
+                    <a class="item overanimate">Me</a>
+                    <a class="item overanimate">Projects</a>
+                    <a class="item overanimate">Experience</a>
                 </div>
             </div>
-
             <div class="ui text container">
                 <h1 class="ui inverted header">Depado</h1>
                 <h2>Paul Lhussiez<br />Developer, Geek, New Technologies Enthusiast</h2>
@@ -120,7 +118,7 @@
                 <br /><br />
                 <div class="ui container">
                     <p>
-                        The color of the card determines whether or not the service is running. Green if the service is up, red if the service isn't. Clicking on the build status will get you to the build server.
+                        The color of the card determines whether or not the service is running. Green if the service is up, red if the service isn't. Clicking on the build status will get you to the build server. To access the service, simply click on the short url written under the project's name.
                     </p>
                 </div>
             </div>
@@ -130,29 +128,23 @@
     <script src="static/semantic.min.js"></script>
     <script src="static/mo.min.js"></script>
     <script>
-        $(document)
-            .ready(function() {
-
-                // fix menu when passed
-                $('.masthead')
-                    .visibility({
-                        once: false,
-                        onBottomPassed: function() {
-                            $('.fixed.menu').transition('fade in');
-                        },
-                        onBottomPassedReverse: function() {
-                            $('.fixed.menu').transition('fade out');
-                        }
-                    });
-
-                // create sidebar and attach to menu open
-                $('.ui.sidebar').sidebar('attach events', '.toc.item');
-                $('.with-popup').popup({
-                    position: 'bottom center',
-                });
+        $(document).ready(function() {
+            $('.masthead').visibility({
+                once: false,
+                onBottomPassed: function() {
+                    $('.fixed.menu').transition('fade in');
+                },
+                onBottomPassedReverse: function() {
+                    $('.fixed.menu').transition('fade out');
+                }
             });
-        var burstEl = document.getElementById('burst');
+            $('.ui.sidebar').sidebar('attach events', '.toc.item');
+            $('.with-popup').popup({
+                position: 'bottom center',
+            });
+        });
 
+        var burstEl = document.getElementById('burst');
         setInterval(function() {
             var randomStrokeWidth = (10 + Math.random() * 10);
             var strokeWidth = {};
@@ -161,9 +153,7 @@
             new mojs.Transit({
                 parent: burstEl,
                 type: 'circle',
-                radius: {
-                    0: 30 + (Math.random() * 70)
-                },
+                radius: {0: 30 + (Math.random() * 70)},
                 fill: 'transparent',
                 stroke: 'white',
                 strokeWidth: strokeWidth,
