Finalizing projects section

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,7 +31,11 @@
         h1,
         h2,
         h3 {
-            line-height: 1.2
+            line-height: 1.2;
+        }
+
+        h3 {
+            margin-top: 70px;
         }
     </style>
 </head>
@@ -48,7 +52,6 @@
         <li><a href="#linux">Linux</a></li>
         <li><a href="#troll">Troll</a></li>
     </ul>
-    <br />
     <h3 id="about">About this page.</h3>
     <p>
         So this page doesn't contain much CSS, and doesn't contain JS.
@@ -62,7 +65,6 @@
     <p>
         OK. There is some CSS in there, I'm even using the Roboto font. After all I still like to do pretty things.
     </p>
-    <br />
     <h3 id="opensource">Open Source. Open Source EVERYTHING !</h3>
     <p>
         I believe in the open-source world. I believe in the community. I believe that someday the stuff I made when I was 23 will be somewhat useful to a little guy trying to learn things in the future. Why not after all ?
@@ -77,7 +79,6 @@
     <p>
         I mean alright, if someone wants the same thing as you, why don't they just take the code, modify it to fit their needs ? Problem is, that's not the way I think. I think about sharing first.
     </p>
-    <br />
     <h3 id="reasons">Reasons to publicly publish your code</h3>
     <p><i>“I can't publish my code on Github it's not finished yet, people will think I'm a bad developer”</i></p>
     <p>
@@ -106,7 +107,6 @@
     <p>
         It's not just a way to do things, versionning your code is a very good practice, it's also a way to think. Thinking about community, thinking that sharing your knowledge is something really important.
     </p>
-    <br />
     <h3 id="licenses">Licenses</h3>
     <p>
         One thing people ask often is something like “How can I prevent people to use my project to make money ?”. Spoiler alert : I don't know. And I don't care.
@@ -125,7 +125,6 @@
     <p>
         I just want to make something clear : I don't do open-source for ANY other reason than to share with the world. I don't want to force my view of the world to people, I don't want to be recognised, I just do it for the pure pleasure to share. Simply that.
     </p>
-    <br />
     <h3 id="linux">Linux</h3>
     <p>
         I'm a Linux user, I administrate Linux servers. I honnestly don't see how people can even develop on Windows. As I have no experience with Mac, I won't speak about it here.
@@ -142,7 +141,6 @@
         I'm running Archlinux. It's been four years that Arch is on my machine, I never resintalled it, not even once. There is always a solution, a good solution, to any one of your problem. It forces you to learn things and to understand how things work under
         the hood.
     </p>
-    <br />
     <h3 id="troll">Troll</h3>
     <p>
         I'm a troll. Sometimes I'll just randomly bash a language, an idea or whatever, just for the pleasure to make people react. I hate PHP and I didn't even write a single line of it. It's goddamn 2016 seriously, it's time to think of the web as something
