--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,9 @@
                                 {{ if eq .ShortURL "" }} - {{ else }}
                                 <a href="{{ .URL }}" target="_blank">{{ .ShortURL }}</a> {{ end }}
                             </div>
-                            <div class="description"></div>
+                            {{ if .Description }}
+                            <div class="description">{{ .Description }}</div>
+                            {{ end }}
                         </div>
                         {{ if or .RepoURL .LastBuild }}
                         <div class="extra content">
@@ -110,6 +112,23 @@
                             <a href="{{ .BuildURL }}" target="_blank" style="color:#DB2828;"><i class="configure icon"></i> Failure</a> {{ else }}
                             <i class="configure icon"></i> No Build {{ end }} {{ else }}
                             <i class="configure icon"></i> No Build {{ end }}
+                        </div>
+                        <div class="extra content" style="text-align: center;">
+                        {{ if .RepoURL }}
+                            <a href="{{ .RepoURL }}/stargazers" target="_blank">
+                                <button class="ui tiny teal basic compact labeled icon button"><i class="star icon"></i>{{ .RepoStars }}</button>
+                            </a>
+                            <a href="{{ .RepoURL }}/network" target="_blank">
+                                <button class="ui tiny teal basic compact labeled icon button"><i class="fork icon"></i>{{ .RepoForks }}</button>
+                            </a>
+                            <a href="{{ .RepoURL }}/watchers" target="_blank">
+                                <button class="ui tiny teal basic compact labeled icon button"><i class="eye icon"></i>{{ .RepoWatchers }}</button>
+                            </a>
+                        {{ else }}
+                            <button class="ui tiny disabled teal basic compact labeled icon button"><i class="star icon"></i>-</button>
+                            <button class="ui tiny disabled teal basic compact labeled icon button"><i class="fork icon"></i>-</button>
+                            <button class="ui tiny disabled teal basic compact labeled icon button"><i class="eye icon"></i>-</button>
+                        {{ end }}
                         </div>
                         {{ end }}
                     </div>
