--- a/templates/skills.tmpl
+++ b/templates/skills.tmpl
@@ -8,7 +8,7 @@
         <div class="ui two column grid">
             <div class="column">
                 <div class="ui raised segment">
-                    <a class="ui red ribbon label">Languages</a>
+                    <span class="ui red ribbon label">Languages</span>
                     <div class="ui fluid card">
                         <div class="content">
                             <div class="header">
@@ -52,11 +52,11 @@
                                 </div>
                             </div>
                             <div class="meta">
-                                Versions : 2.7 or 3.5+
+                                Versions : 2.7 or 3.6+
                             </div>
                         </div>
                         <div class="extra content">
-                            Python is the language I worked the most with. I mainly work with the 3.x version (currently 3.5.1).
+                            Python is the language I worked the most with. I mainly work with the 3.x version (currently 3.6).
                         </div>
                         <div class="extra content">
                             <div class="ui labels">
@@ -78,6 +78,9 @@
                                     <span class="ui basic yellow circular label">Frontend</span>
                                 </div>
                             </div>
+                            <div class="meta">
+                                Versions : I don't care ?
+                            </div>
                         </div>
                         <div class="extra content">
                             I mainly use Javascript on the front side, and it's only because I have to. I did only one node.js project.
@@ -90,12 +93,93 @@
                     </div>
                 </div>
                 <div class="ui raised segment">
-                    <a class="ui red ribbon label">Database</a>
+                    <span class="ui red ribbon label">Database</span>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                BoltDB
+                                <div class="ui right floated">
+                                    <span class="ui basic pink circular label">Key Value</span>
+                                    <span class="ui basic green circular label">Backend</span>
+                                </div>
+                            </div>
+                            <div class="meta">
+                                <a href="https://github.com/boltdb/bolt" target="_blank" style="color:#6A6AFF;" class="with-popup" data-content="Github Repository"><i class="github alternate icon"></i></a>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            An embedded key/value database for Go.
+                        </div>
+                        <div class="extra content">
+                            <div class="ui labels">
+                                <a class="ui label with-popup" href="https://github.com/Depado/goploader" target="_blank" data-content="Go, Gin, BoltDB">Goploader</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/go-b0tsec" target="_blank" data-content="Go, BoltDB">go-b0tsec</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/govue" target="_blank" data-content="Go, Gin, Vue.js, BoltDB">GoVue</a> </div>
+                        </div>
+                    </div>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                SQLite
+                                <div class="ui right floated">
+                                    <span class="ui basic brown circular label">Relational</span>
+                                    <span class="ui basic green circular label">Backend</span>
+                                </div>
+                            </div>
+                            <div class="meta">
+                                <a href="https://github.com/mackyle/sqlite" target="_blank" style="color:#6A6AFF;" class="with-popup" data-content="Github Repository"><i class="github alternate icon"></i></a>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            An embedded relational database.
+                        </div>
+                        <div class="extra content">
+                            <div class="ui labels">
+                                <a class="ui label with-popup" href="https://github.com/Depado/gopaste" target="_blank" data-content="Go, Goji, SQLite">Gopaste</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/MarkDownBlog" target="_blank" data-content="Python, Flask, SQLAlchemy, SQLite">MarkDownBlog</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/LostInNetwork" target="_blank" data-content="Python, Flask, SQLAlchemy, SQLite">LostInNetwork</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                PostgreSQL
+                                <div class="ui right floated">
+                                    <span class="ui basic brown circular label">Relational</span>
+                                    <span class="ui basic green circular label">Backend</span>
+                                </div>
+                            </div>
+                            <div class="meta">
+                                <a href="https://github.com/postgres/postgres" target="_blank" style="color:#6A6AFF;" class="with-popup" data-content="Github Repository"><i class="github alternate icon"></i></a>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            Object-relational database management system with an emphasis on extensibility and standards-compliance. Mainly used in a professional environment.
+                        </div>
+                    </div>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                MySQL
+                                <div class="ui right floated">
+                                    <span class="ui basic brown circular label">Relational</span>
+                                    <span class="ui basic green circular label">Backend</span>
+                                </div>
+                            </div>
+                            <div class="meta">
+                                <a href="https://github.com/mysql/mysql-server" target="_blank" style="color:#6A6AFF;" class="with-popup" data-content="Github Repository"><i class="github alternate icon"></i></a>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            MySQL Server, the world's most popular open source database. Mainly used in a professional environment.
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="column">
                 <div class="ui raised segment">
-                    <a class="ui red ribbon label">Frameworks</a>
+                    <span class="ui red ribbon label">Frameworks</span>
                     <div class="ui fluid card">
                         <div class="content">
                             <div class="header">
@@ -175,6 +259,9 @@
                                     <span class="ui basic green circular label">Backend</span>
                                 </div>
                             </div>
+                            <div class="meta">
+                                <a href="https://github.com/jinzhu/gorm" target="_blank" style="color:#6A6AFF;" class="with-popup" data-content="Github Repository"><i class="github alternate icon"></i></a>
+                            </div>
                         </div>
                         <div class="extra content">
                             ORM for SQL databases for the Go language. Mostly used for my projects using SQLite.
@@ -185,12 +272,56 @@
                             </div>
                         </div>
                     </div>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                SQLAlchemy
+                                <div class="ui right floated">
+                                    <span class="ui basic pink circular label">ORM</span>
+                                    <span class="ui basic green circular label">Backend</span>
+                                </div>
+                            </div>
+                            <div class="meta">
+                                <a href="https://bitbucket.org/zzzeek/sqlalchemy" target="_blank" style="color:#6A6AFF;" class="with-popup" data-content="Bitbucket Repository"><i class="bitbucket icon"></i></a>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            ORM for SQL databases for the Python language. Mostly used in my Flask projects.
+                        </div>
+                        <div class="extra content">
+                            <div class="ui labels">
+                                <a class="ui label with-popup" href="https://github.com/Depado/MarkDownBlog" target="_blank" data-content="Python, Flask, SQLAlchemy, SQLite">MarkDownBlog</a>
+                                <a class="ui label with-popup" href="https://github.com/Depado/LostInNetwork" target="_blank" data-content="Python, Flask, SQLAlchemy, SQLite">LostInNetwork</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                Semantic UI
+                                <div class="ui right floated">
+                                    <span class="ui basic yellow circular label">Frontend</span>
+                                </div>
+                            </div>
+                            <div class="meta">
+                                <a href="https://github.com/Semantic-Org/Semantic-UI" target="_blank" style="color:#6A6AFF;" class="with-popup" data-content="Github Repository"><i class="github alternate icon"></i></a>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            Semantic is a UI component framework based around useful principles from natural language.
+                        </div>
+                        <div class="extra content">
+                            <div class="ui labels">
+                                <a class="ui label with-popup" href="https://github.com/Depado/portfolio.v2" target="_blank" data-content="Go, Gin">Portfolio.V2</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="ui raised segment">
-                    <a class="ui red ribbon label">Devops</a>
+                    <span class="ui red ribbon label">Devops</span>
                 </div>
                 <div class="ui raised segment">
-                    <a class="ui red ribbon label">Environments</a>
+                    <span class="ui red ribbon label">Environments</span>
                 </div>
             </div>
         </div>
