--- a/templates/skills.tmpl
+++ b/templates/skills.tmpl
@@ -308,7 +308,7 @@
                             </div>
                         </div>
                         <div class="extra content">
-                            Semantic is a UI component framework based around useful principles from natural language.
+                            Semantic is a UI component framework based around useful principles from natural language. (CSS and JS)
                         </div>
                         <div class="extra content">
                             <div class="ui labels">
@@ -319,9 +319,62 @@
                 </div>
                 <div class="ui raised segment">
                     <span class="ui red ribbon label">Devops</span>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                Ansible
+                                <div class="ui right floated">
+                                    <span class="ui basic grey circular label">Deployment</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            I use Ansible on a daily basis to deploy my projects. Also used it in a professional environment to automate the servers provisionning.
+                        </div>
+                    </div>
                 </div>
                 <div class="ui raised segment">
                     <span class="ui red ribbon label">Environments</span>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                Archlinux
+                                <div class="ui right floated">
+                                    <span class="ui basic red circular label">Work Station</span>
+                                    <span class="ui basic orange circular label">Server</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            I'm currently working on my Archlinux laptop. It's been four years since I installed Arch and everything works fine (even though my root partition is currently full because of Docker). One of my raspberry also runs Arch and acts like a server for some of my IRC bots.
+                        </div>
+                    </div>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                Debian
+                                <div class="ui right floated">
+                                    <span class="ui basic orange circular label">Server</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            Most of my servers are running Debian (2 Scaleways, 1 OVH), I admnistrate those on a daily basis.
+                        </div>
+                    </div>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                Alpine
+                                <div class="ui right floated">
+                                    <span class="ui basic orange circular label">Server</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            When working with Docker, I love Alpine because of its small size and all of its security aspects.
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
